# CV_Examples

./: README.md  facedetection.cpp
FDR/: CMakeLists.txt
FDR/includes/: facedetection_yunet.h  facerecognition_sface.h  framecapture.h
FDR/sources/: facedetection_yunet.cpp  facerecognition_sface.cpp  framecapture.cpp  main.cpp
fdr_2/: CMakeLists.txt  To_Do.txt
fdr_2/includes/: config.h  facedetector.h  facerecognizer.h  framecapture.h
fdr_2/sources/: facedetector.cpp  facerecognizer.cpp  framecapture.cpp  main.cpp
